--- a/index.html
+++ b/index.html
@@ -5,8 +5,136 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+    <header class="main-header">
+      <div class="container">
+        <nav class="main-navigation">
+          <ul>
+            <li>
+              <a href="#">ИНФОРМАЦИЯ</a>
+            </li>
+            <li>
+              <a href="#">ФОТО И ВИДЕО</a>
+            </li>
+            <li>
+              <img src="" width="" height="" alt="">
+            </li>
+            <li>
+              <a href="#">КАРТА ШТАТА</a>
+            </li>
+            <li>
+              <a href="#">ГОСТИНИЦЫ</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <main class="container">
+      <div class="index-welcome">
+        <img src="" width="" height="" alt="Welcome to CEDONA">
+      </div>
+      <div class="index-content">
+        <b>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</b>
+        <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КОНЬОН!</p>
+      </div>
+      <article class="features">
+        <div class="features-description">
+          <h2 class="features-name">НАСТОЯЩИЙ ГОРОДОК</b>
+          <p>- № 1 -</p>
+          <p>СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ ЖИЗНЬ</p>
+        </div>
+        <div class="features-image">
+          <img src="">
+        </div>
+      </article>
+      <section class="accommodation">
+        <div class="accommodation-description">
+          <img src="">
+          <b>ЖИЛЬЕ</b>
+          <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
+        </div>
+        <div class="accommodation-description">
+          <img src="">
+          <b>ЕДА</b>
+          <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ</p>
+        </div>
+        <div class="accommodation-description">
+          <img src="">
+          <b>СУВЕНИРЫ</b>
+          <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
+        </div>
+      </section>
+      <article class="features">
+        <div class="features-image">
+          <img src="">
+        </div>
+        <div class="features-description">
+          <h2 class="features-name">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</b>
+          <p>- № 2 -</p>
+          <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
+        </div>
+      </article>
+      <section class="features">
+        <div class="features-description">
+          <b class="features-name">НЕБОЛЬШАЯ ПЛОЩАДЬ</b>
+          <p>- № 3 -</p>
+          <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
+        </div>
+        <div class="features-description">
+          <b class="features-name">КРАСИВАЯ ДОРОГА</b>
+          <p>- № 4 -</p>
+          <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО</p>
+        </div>
+        <div class="features-description">
+          <b class="features-name">НЕБОЛЬШАЯ ПЛОЩАДЬ</b>
+          <p>- № 5 -</p>
+          <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
+        </div>
+      </section>
+      <section class="hotels">
+        <div class="hotels-header">
+          <b>ЗАИНТЕРЕСОВАЛИСЬ?</b>
+          <p>УКАЖИТЕ ПРЕДПОЛОГАЕМЫЕ ДАТЫ ПОЕЗДКИ,<br>
+            И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
+        </div>
+        <div class="hotels-map">
+          <img src="">
+        </div>
+      </section>
+      <div class="hotels-filter">
+        <div class="hotels-filter-header">
+           <p>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ<p>
+        </div>
+        <form class="hotels-search-form" action="https://echo.htmlacademy.ru" method="post">
+          <label for="checkin-field-id">ДАТА ЗАЕЗДА:</label>
+          <input id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
+          <label for="checkout-field-id">ДАТА ВЫЕЗДА:</label>
+          <input id="checkout-field-id" type="text" name="checkout-date" value="4 ИЮЛЯ 2016">
+          <label for="adults-field-id">ВЗРОСЛЫЕ:</label>
+          <button class="btn-inc" type="button">-</button>
+          <input id="adults-field-id" type="text" name="adults-cnt" value="2">
+          <button class="btn-inc" type="button">+</button>
+          <label for="children-field-id">ДЕТИ:</label>
+          <button class="btn-inc" type="button">-</button>
+          <input id="children-field-id" type="text" name="children-cnt" value="0">
+          <button class="btn-inc" type="button">+</button>
+          <button class="btn" type="submit">НАЙТИ</button>
+        </form>
+      <div>
+    </main>
+    <footer class="main-footer">
+      <div class="container">
+        <section class="footer-hashtag">
+          <a href="#">#VISITSEDONA</a>
+        </section>
+        <section class="footer-social">
+          <a class="social-btn social-btn-twitter" href="#">Твиттер</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
+        </section>
+        <section class="footer-copyright">
+          WEBSITE BY <a href="https://htmlacademy.ru"><img src=""></a>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
