--- a/index.html
+++ b/index.html
@@ -3,126 +3,120 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-    <header class="main-header">
-      <div class="container">
+    <div class="container">
+      <header class="main-header">
         <nav class="main-navigation">
           <ul>
             <li>
-              <a href="#">ИНФОРМАЦИЯ</a>
+              <a href="#">Информация</a>
             </li>
             <li>
-              <a href="#">ФОТО И ВИДЕО</a>
+              <a href="#">Фото и видео</a>
             </li>
             <li>
-              <img src="" width="" height="" alt="">
+              <a href="#">Карта штата</a>
             </li>
             <li>
-              <a href="#">КАРТА ШТАТА</a>
-            </li>
-            <li>
-              <a href="#">ГОСТИНИЦЫ</a>
+              <a href="#">Гостиницы</a>
             </li>
           </ul>
         </nav>
-      </div>
-    </header>
-    <main class="container">
-      <div class="index-welcome">
-        <img src="" width="" height="" alt="Welcome to CEDONA">
-      </div>
-      <div class="index-content">
-        <b>СЕДОНА - НЕБОЛЬШОЙ ГОРОДОК В АРИЗОНЕ, ЗАСЛУЖИВАЮЩИЙ БОЛЬШЕГО</b>
-        <p>РАССМОТРИМ 5 ПРИЧИН, ПО КОТОРЫМ СЕДОНА КРУЧЕ, ЧЕМ ГРАНД КОНЬОН!</p>
-      </div>
-      <article class="features">
-        <div class="features-description">
-          <h2 class="features-name">НАСТОЯЩИЙ ГОРОДОК</b>
-          <p>- № 1 -</p>
-          <p>СЕДОНА НЕ АТТРАКЦИОН ДЛЯ ТУРИСТОВ, ТАМ ТЕЧЕТ ЖИЗНЬ</p>
+        <div class="top-logo">
+          <img src="img/top-logo.png" width="138" height="70" alt="Седона">
         </div>
-        <div class="features-image">
-          <img src="">
+      </header>
+      <main>
+        <div class="index-welcome">
+          <img src="img/cedona-welcome.jpg" width="1200" height="564" alt="Welcome to CEDONA">
+          <p class="index-welcome-triangle"><!-- Здесь будет псевдографика треугольников --></p>
         </div>
-      </article>
-      <section class="accommodation">
-        <div class="accommodation-description">
-          <img src="">
-          <b>ЖИЛЬЕ</b>
-          <p>РЕКОМЕНДУЕМ ПОЖИТЬ В НАСТОЯЩЕМ МОТЕЛЕ, ВСЕ КАК В КИНО!</p>
+        <div class="index-content">
+          <h1>Седона - небольшой городок в аризоне, заслуживающий большего</h1>
+          <p>Рассмотрим 5 причин, по которым седона круче, чем гранд коньон!</p>
         </div>
-        <div class="accommodation-description">
-          <img src="">
-          <b>ЕДА</b>
-          <p>ВСЕГДА ЗАКАЗЫВАЙТЕ ФИРМЕННЫЙ БУРГЕР, ВЫ НЕ РАЗОЧАРУЕТЕСЬ</p>
-        </div>
-        <div class="accommodation-description">
-          <img src="">
-          <b>СУВЕНИРЫ</b>
-          <p>НЕ ТОЛЬКО КИТАЙСКОГО, НО И МЕСТНОГО ПРОИЗВОДСТВА!</p>
-        </div>
-      </section>
-      <article class="features">
-        <div class="features-image">
-          <img src="">
-        </div>
-        <div class="features-description">
-          <h2 class="features-name">ТАМ ЕСТЬ МОСТ ДЬЯВОЛА</b>
-          <p>- № 2 -</p>
-          <p>ДА, ПО НЕМУ МОЖНО ПРОЙТИ! ЕСЛИ КОНЕЧНО ВЫ ОСМЕЛИТЕСЬ</p>
-        </div>
-      </article>
-      <section class="features">
-        <div class="features-description">
-          <b class="features-name">НЕБОЛЬШАЯ ПЛОЩАДЬ</b>
-          <p>- № 3 -</p>
-          <p>ВСЕ ДОСТОПРИМЕЧАТЕЛЬНОСТИ НАХОДЯТСЯ ОЧЕНЬ БЛИЗКО</p>
-        </div>
-        <div class="features-description">
-          <b class="features-name">КРАСИВАЯ ДОРОГА</b>
-          <p>- № 4 -</p>
-          <p>ЕХАТЬ В СЕДОНУ ИЗ ЛАС-ВЕГАСА СОВСЕМ НЕ СКУЧНО</p>
-        </div>
-        <div class="features-description">
-          <b class="features-name">НЕБОЛЬШАЯ ПЛОЩАДЬ</b>
-          <p>- № 5 -</p>
-          <p>БОЛЬШИНСТВО ЕДЕТ В ГРАНД КАНЬОН И ТОЛПИТСЯ ТАМ</p>
-        </div>
-      </section>
-      <section class="hotels">
-        <div class="hotels-header">
-          <b>ЗАИНТЕРЕСОВАЛИСЬ?</b>
-          <p>УКАЖИТЕ ПРЕДПОЛОГАЕМЫЕ ДАТЫ ПОЕЗДКИ,<br>
-            И МЫ ПОКАЖЕМ ВАМ ЛУЧШИЕ ПРЕДЛОЖЕНИЯ ГОСТИНИЦ В СЕДОНЕ</p>
-        </div>
-        <div class="hotels-map">
-          <img src="">
-        </div>
-      </section>
-      <div class="hotels-filter">
-        <div class="hotels-filter-header">
-           <p>ПОИСК ГОСТИНИЦЫ В СЕДОНЕ<p>
-        </div>
-        <form class="hotels-search-form" action="https://echo.htmlacademy.ru" method="post">
-          <label for="checkin-field-id">ДАТА ЗАЕЗДА:</label>
-          <input id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
-          <label for="checkout-field-id">ДАТА ВЫЕЗДА:</label>
-          <input id="checkout-field-id" type="text" name="checkout-date" value="4 ИЮЛЯ 2016">
-          <label for="adults-field-id">ВЗРОСЛЫЕ:</label>
-          <button class="btn-inc" type="button">-</button>
-          <input id="adults-field-id" type="text" name="adults-cnt" value="2">
-          <button class="btn-inc" type="button">+</button>
-          <label for="children-field-id">ДЕТИ:</label>
-          <button class="btn-inc" type="button">-</button>
-          <input id="children-field-id" type="text" name="children-cnt" value="0">
-          <button class="btn-inc" type="button">+</button>
-          <button class="btn" type="submit">НАЙТИ</button>
-        </form>
-      <div>
-    </main>
-    <footer class="main-footer">
-      <div class="container">
+        <section class="feature">
+          <div class="feature-description">
+            <h2 class="feature-name">Настоящий городок</h2>
+            <p class="feature-number">№1</p>
+            <p>Седона не аттракцион для туристов, там течет жизнь</p>
+          </div>
+          <div class="feature-image">
+            <img src="img/feature-image-one.jpg" width="800" height="256">
+          </div>
+        </section>
+        <section class="accommodation">
+          <div class="accommodation-description hotel">
+            <b>Жилье</b>
+            <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </div>
+          <div class="accommodation-description food">
+            <b>Еда</b>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+          </div>
+          <div class="accommodation-description souvenir">
+            <b>Сувениры</b>
+            <p>Не только китайского, но и местного производства!</p>
+          </div>
+        </section>
+        <section class="feature">
+          <div class="feature-image">
+            <img src="img/feature-image-two.jpg" width="800" height="256">
+          </div>
+          <div class="feature-description">
+            <h2 class="feature-name">Там есть мост дьявола</h2>
+            <p class="feature-number">№2</p>
+            <p>Да, по нему можно пройти! если конечно вы осмелитесь</p>
+          </div>
+        </section>
+        <section class="features">
+          <div class="features-description">
+            <b class="features-name">Небольшая площадь</b>
+            <p class="features-number">№3</p>
+            <p>Все достопримечательности находятся очень близко</p>
+          </div>
+          <div class="features-description">
+            <b class="features-name">Красивая дорога</b>
+            <p class="features-number">№4</p>
+            <p>Ехать в седону из лас-вегаса совсем не скучно</p>
+          </div>
+          <div class="features-description">
+            <b class="features-name">Небольшая площадь</b>
+            <p class="features-number">№5</p>
+            <p>Большинство едет в гранд каньон и толпится там</p>
+          </div>
+        </section>
+        <section class="hotels">
+          <div class="hotels-header">
+            <b>Заинтересовались?</b>
+            <p>Укажите предпологаемые даты поездки,<br>
+              и мы покажем вам лучшие предложения гостиниц в седоне</p>
+            <div class="hotels-filter">
+              <form class="hotels-search-form" action="https://echo.htmlacademy.ru" method="post">
+                <label for="checkin-field-id">Дата заезда:</label>
+                <input id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
+                <label for="checkout-field-id">Дата выезда:</label>
+                <input id="checkout-field-id" type="text" name="checkout-date" value="4 ИЮЛЯ 2016">
+                <label for="adults-field-id">Взрослые:</label>
+                <button class="btn-inc" type="button">-</button>
+                <input id="adults-field-id" type="text" name="adults-cnt" value="2">
+                <button class="btn-inc" type="button">+</button>
+                <label for="children-field-id">Дети:</label>
+                <button class="btn-inc" type="button">-</button>
+                <input id="children-field-id" type="text" name="children-cnt" value="0">
+                <button class="btn-inc" type="button">+</button>
+                <button class="btn" type="submit">Найти</button>
+              </form>
+            </div>
+            <button class="btn hotels-form-btn" type="button">Поиск гостиницы в седоне</button>
+          </div>
+          <div class="hotels-map">
+          </div>
+        </section>
+      </main>
+      <footer class="main-footer">
         <section class="footer-hashtag">
           <a href="#">#VISITSEDONA</a>
         </section>
@@ -132,9 +126,9 @@
           <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
         </section>
         <section class="footer-copyright">
-          WEBSITE BY <a href="https://htmlacademy.ru"><img src=""></a>
+          Website by <a href="https://htmlacademy.ru"><img src="img/html-academy-logo.png" width="113" height="39"></a>
         </section>
-      </div>
-    </footer>
+      </footer>
+    </div>
   </body>
 </html>
