--- a/catalog.html
+++ b/catalog.html
@@ -29,7 +29,7 @@
         </div>
       </header>
       <main>
-        <div class="filters">
+        <div class="filters clearfix">
           <form class="filters-form" action="https://echo.htmlacademy.ru" method="post">
             <div class="filters-checkbox-block">
               <p>Инфраструктура:</p>
@@ -71,7 +71,7 @@
             </div>
           </form>
         </div>
-        <div class="sorts">
+        <div class="sorts clearfix">
           <div class="filter-found">
             <b>Найдено:</b><b id="filter-found-cnt-id">3</b>
           </div>
@@ -95,13 +95,13 @@
           </div>
         </div>
         <section class="hotels">
-          <article class="hotel">
+          <article class="hotel clearfix">
             <div class="hotel-img" >
               <img src="img/hotel-one.jpg" width="135" height="90">
             </div>
             <div class="hotel-bookin">
               <h2>Amara resort &amp; spa</h2>
-              <p>Гостиница от 3500 р.</td>
+              <p>Гостиница от 3500 р.</p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
@@ -112,13 +112,13 @@
               <div class="hotel-rating-number" href="#">Рейтинг: 8.5</div>
             </div>
           </article>
-          <article class="hotel">
+          <article class="hotel clearfix">
             <div class="hotel-img" >
               <img src="img/hotel-two.jpg" width="135" height="90">
             </div>
             <div class="hotel-bookin">
               <h2>Desert quail inn</h2>
-              <p>Мотель от 2000 р.</td>
+              <p>Мотель от 2000 р.</p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
@@ -129,13 +129,13 @@
               <div class="hotel-rating-number" href="#">Рейтинг: 8.9</div>
             </div>
           </article>
-          <article class="hotel">
+          <article class="hotel clearfix">
             <div class="hotel-img" >
               <img src="img/hotel-three.jpg" width="135" height="90">
             </div>
             <div class="hotel-bookin">
               <h2>Villas at poco diablo</h2>
-              <p>Апартаменты от 4000 р.</td>
+              <p>Апартаменты от 4000 р.</p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
