Занятие 5 Декоративные элементы

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&subset=cyrillic" rel="stylesheet">
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
-          <ul>
+          <ul class="clearfix">
             <li>
               <a href="#">Информация</a>
             </li>
@@ -17,10 +19,10 @@
               <a href="#">Фото и видео</a>
             </li>
             <li>
-              <a href="#">Карта штата</a>
+              <a href="#">Гостиницы</a>
             </li>
             <li>
-              <a href="#">Гостиницы</a>
+              <a href="#">Карта штата</a>
             </li>
           </ul>
         </nav>
@@ -30,32 +32,32 @@
       </header>
       <main>
         <div class="index-welcome">
-          <img src="img/cedona-welcome.jpg" width="1200" height="564" alt="Welcome to CEDONA">
+          <!-- <img src="http://placehold.it/1200x508" width="1200" height="508" alt="Welcome to CEDONA"> -->
         </div>
         <div class="index-content">
-          <h1>Седона - небольшой городок в аризоне, заслуживающий большего</h1>
+          <h1>Седона &mdash; небольшой городок в аризоне, заслуживающий большего!</h1>
           <p>Рассмотрим 5 причин, по которым седона круче, чем гранд каньон!</p>
         </div>
         <section class="feature feature-number-one clearfix">
           <div class="feature-description">
             <h2 class="feature-name">Настоящий городок</h2>
-            <p class="feature-number">№1</p>
-            <p>Седона не аттракцион для туристов, там течет жизнь</p>
+            <p class="feature-number">&mdash; №1 &mdash;</p>
+            <p class="feature-text">Седона &mdash; не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <div class="feature-image">
             <img src="img/feature-image-one.jpg" width="800" height="256">
           </div>
         </section>
-        <section class="accommodation clearfix">
-          <div class="accommodation-description hotel">
+        <section class="need clearfix">
+          <div class="need-description need-housing">
             <b>Жилье</b>
             <p>Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </div>
-          <div class="accommodation-description food">
+          <div class="need-description need-food">
             <b>Еда</b>
-            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь</p>
+            <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
           </div>
-          <div class="accommodation-description souvenir">
+          <div class="need-description need-souvenir">
             <b>Сувениры</b>
             <p>Не только китайского, но и местного производства!</p>
           </div>
@@ -65,37 +67,37 @@
             <img src="img/feature-image-two.jpg" width="800" height="256">
           </div>
           <div class="feature-description">
-            <h2 class="feature-name">Там есть мост дьявола</h2>
-            <p class="feature-number">№2</p>
-            <p>Да, по нему можно пройти! если конечно вы осмелитесь</p>
+            <h2 class="feature-name">Там есть <br> мост дьявола</h2>
+            <p class="feature-number">&mdash; №2 &mdash;</p>
+            <p class="feature-text">Да, по нему можно пройти! если конечно вы осмелитесь</p>
           </div>
         </section>
         <section class="features clearfix">
-          <div class="features-description">
-            <b class="features-name">Небольшая площадь</b>
-            <p class="features-number">№3</p>
-            <p>Все достопримечательности находятся очень близко</p>
+          <div class="feature-description">
+            <h2 class="feature-name">Небольшая площадь</h2>
+            <p class="feature-number">&mdash; №3 &mdash;</p>
+            <p class="feature-text">Все достопримечательности находятся очень близко</p>
           </div>
-          <div class="features-description">
-            <b class="features-name">Красивая дорога</b>
-            <p class="features-number">№4</p>
-            <p>Ехать в седону из лас-вегаса совсем не скучно</p>
+          <div class="feature-description">
+            <h2 class="feature-name">Красивая дорога</h2>
+            <p class="feature-number">&mdash; №4 &mdash;</p>
+            <p class="feature-text">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
           </div>
-          <div class="features-description">
-            <b class="features-name">Небольшая площадь</b>
-            <p class="features-number">№5</p>
-            <p>Большинство едет в гранд каньон и толпится там</p>
+          <div class="feature-description">
+            <h2 class="feature-name">Мало туристов</h2>
+            <p class="feature-number">&mdash; №5 &mdash;</p>
+            <p class="feature-text">Большинство едет в гранд каньон и толпится там</p>
           </div>
         </section>
-        <section class="hotels">
-          <div class="hotels-header">
+        <section class="hotel-search">
+          <div class="hotel-search-header">
             <b>Заинтересовались?</b>
             <p>Укажите предпологаемые даты поездки,<br>
               и мы покажем вам лучшие предложения гостиниц в седоне</p>
-            <button class="btn hotels-form-btn" type="button">Поиск гостиницы в седоне</button>
+            <button class="btn hotel-search-form-popup-btn" type="button">Поиск гостиницы в седоне</button>
           </div>
-          <div class="hotels-filter">
-            <form class="hotels-search-form" action="https://echo.htmlacademy.ru" method="post">
+          <div class="hotel-search-filter">
+            <form class="hotel-search-form" action="https://echo.htmlacademy.ru" method="post">
               <label for="checkin-field-id">Дата заезда:</label>
               <input id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
               <label for="checkout-field-id">Дата выезда:</label>
@@ -111,7 +113,8 @@
               <button class="btn" type="submit">Найти</button>
             </form>
           </div>
-          <div class="hotels-map">
+          <div class="hotel-search-map">
+            <img src="img/map.jpg" width="1200" height="473">
           </div>
         </section>
       </main>
@@ -125,7 +128,10 @@
           <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
         </section>
         <section class="footer-copyright">
-          Website by <a href="https://htmlacademy.ru"><img src="img/html-academy-logo.png" width="113" height="39"></a>
+          <span>Website by</span>
+          <a href="https://htmlacademy.ru">
+            <img src="img/html-academy-logo.png" width="113" height="39">
+          </a>
         </section>
       </footer>
     </div>
