--- a/catalog.html
+++ b/catalog.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
       <header class="main-header">
         <nav class="main-navigation">
-          <ul>
+          <ul class="clearfix">
             <li>
               <a href="#">Информация</a>
             </li>
@@ -17,10 +18,10 @@
               <a href="#">Фото и видео</a>
             </li>
             <li>
-              <a href="#">Карта штата</a>
+              <a href="#">Гостиницы</a>
             </li>
             <li>
-              <a href="#">Гостиницы</a>
+              <a href="#">Карта штата</a>
             </li>
           </ul>
         </nav>
@@ -29,8 +30,8 @@
         </div>
       </header>
       <main>
-        <div class="filters clearfix">
-          <form class="filters-form" action="https://echo.htmlacademy.ru" method="post">
+        <div class="filters">
+          <form class="filters-form clearfix" action="https://echo.htmlacademy.ru" method="post">
             <div class="filters-checkbox-block">
               <p>Инфраструктура:</p>
               <ul>
@@ -65,17 +66,28 @@
                 </li>
               </ul>
             </div>
-            <div class="filters-price-block">
-              <p>Стоимость в сутки (р):</p>
-              <button class="btn" type="submit">Показать</button>
+            <div class="filter-range">
+              <div class="filter-range-title">Стоимость в сутки (р):</div>
+              <div class="price-controls">
+                <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+                <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+              </div>
+              <div class="range-controls">
+                <div class="scale">
+                  <div class="bar"></div>
+                </div>
+                <div class="range-toggle range-toggle-min"></div>
+                <div class="range-toggle range-toggle-max"></div>
+              </div>
+              <button class="btn-transparent" type="submit">Показать</button>
             </div>
           </form>
         </div>
         <div class="sorts clearfix">
           <div class="filter-found">
-            <b>Найдено:</b><b id="filter-found-cnt-id">3</b>
+            <span>Найдено:</span><span class="filter-found-cnt" id="filter-found-cnt-id">3</span>
           </div>
-          <ul class="sort-by">
+          <ul>
             <li>
               Сортировка:
             </li>
@@ -101,7 +113,7 @@
             </div>
             <div class="hotel-bookin">
               <h2>Amara resort &amp; spa</h2>
-              <p>Гостиница от 3500 р.</p>
+              <p><span class="hotel-bookin-type">Гостиница<span><span class="hotel-bookin-price">от 3500 р.<span></p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
@@ -118,7 +130,7 @@
             </div>
             <div class="hotel-bookin">
               <h2>Desert quail inn</h2>
-              <p>Мотель от 2000 р.</p>
+              <p><span class="hotel-bookin-type">Мотель<span><span class="hotel-bookin-price">от 2000 р.</span></p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
@@ -135,7 +147,7 @@
             </div>
             <div class="hotel-bookin">
               <h2>Villas at poco diablo</h2>
-              <p>Апартаменты от 4000 р.</p>
+              <p><span class="hotel-bookin-type">Апартаменты<span><span class="hotel-bookin-price">от 4000 р.</span></p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
@@ -148,7 +160,7 @@
           </article>
         </section>
       </main>
-      <footer class="main-footer">
+      <footer class="main-footer clearfix">
         <section class="footer-hashtag">
           <a href="#">#VISITSEDONA</a>
         </section>
@@ -158,7 +170,10 @@
           <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
         </section>
         <section class="footer-copyright">
-          WEBSITE BY <a href="https://htmlacademy.ru"><img src="img/html-academy-logo.png" width="113" height="39"></a>
+          <span>Website by</span>
+          <a href="https://htmlacademy.ru">
+            <img src="img/html-academy-logo.png" width="113" height="39">
+          </a>
         </section>
       </footer>
     </div>
