--- a/catalog.html
+++ b/catalog.html
@@ -102,8 +102,8 @@
             </li>
           </ul>
           <div class="sort-direction">
-            <a href="#" class="sort-direction-arrow arrow-up"></a>
-            <a href="#" class="sort-direction-arrow arrow-down"></a>
+            <a href="#" class="sort-direction-arrow arrow-up"><span class="icon-up-dir"></span></a>
+            <a href="#" class="sort-direction-arrow arrow-down"><span class="icon-down-dir"></span></a>
           </div>
         </div>
         <section class="hotels">
@@ -113,15 +113,23 @@
             </div>
             <div class="hotel-bookin">
               <h2>Amara resort &amp; spa</h2>
-              <p><span class="hotel-bookin-type">Гостиница<span><span class="hotel-bookin-price">от 3500 р.<span></p>
+              <p>
+                <span class="hotel-bookin-type">Гостиница</span>
+                <span class="hotel-bookin-price">от 3500 р.</span>
+              </p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
               </div>
             </div>
             <div class="hotel-rating">
-              <p class="hotel-rating-stars"></p>
-              <div class="hotel-rating-number" href="#">Рейтинг: 8.5</div>
+              <div class="hotel-rating-stars">
+                <span class="icon-star"></span>
+                <span class="icon-star"></span>
+                <span class="icon-star"></span>
+                <span class="icon-star"></span>
+              </div>
+              <a class="hotel-rating-number" href="#">Рейтинг: 8.5</a>
             </div>
           </article>
           <article class="hotel clearfix">
@@ -130,15 +138,21 @@
             </div>
             <div class="hotel-bookin">
               <h2>Desert quail inn</h2>
-              <p><span class="hotel-bookin-type">Мотель<span><span class="hotel-bookin-price">от 2000 р.</span></p>
+              <p>
+                <span class="hotel-bookin-type">Мотель</span>
+                <span class="hotel-bookin-price">от 2000 р.</span>
+              </p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
               </div>
             </div>
             <div class="hotel-rating">
-              <p class="hotel-rating-stars"></p>
-              <div class="hotel-rating-number" href="#">Рейтинг: 8.9</div>
+              <div class="hotel-rating-stars">
+                <span class="icon-star"></span>
+                <span class="icon-star"></span>
+              </div>
+              <a class="hotel-rating-number" href="#">Рейтинг: 8.9</a>
             </div>
           </article>
           <article class="hotel clearfix">
@@ -147,15 +161,22 @@
             </div>
             <div class="hotel-bookin">
               <h2>Villas at poco diablo</h2>
-              <p><span class="hotel-bookin-type">Апартаменты<span><span class="hotel-bookin-price">от 4000 р.</span></p>
+              <p>
+                <span class="hotel-bookin-type">Апартаменты</span>
+                <span class="hotel-bookin-price">от 4000 р.</span>
+              </p>
               <div class="hotel-bookin-actions">
                 <a hreh="#">Подробнее</a>
                 <a href="#">Забронировать</a>
               </div>
             </div>
             <div class="hotel-rating">
-              <p class="hotel-rating-stars"></p>
-              <div class="hotel-rating-number" href="#">Рейтинг: 9.2</div>
+              <div class="hotel-rating-stars">
+                <span class="icon-star"></span>
+                <span class="icon-star"></span>
+                <span class="icon-star"></span>
+              </div>
+              <a class="hotel-rating-number" href="#">Рейтинг: 9.2</a>
             </div>
           </article>
         </section>
@@ -165,9 +186,15 @@
           <a href="#">#VISITSEDONA</a>
         </section>
         <section class="footer-social">
-          <a class="social-btn social-btn-twitter" href="#">Твиттер</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
+          <a class="social-btn social-btn-twitter" href="#">Твиттер
+            <span class="icon-twitter"></span>
+          </a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук
+            <span class="icon-facebook"></span>
+          </a>
+          <a class="social-btn social-btn-youtube" href="#">Ютуб
+            <span class="icon-youtube"></span>
+          </a>
         </section>
         <section class="footer-copyright">
           <span>Website by</span>
