--- a/index.html
+++ b/index.html
@@ -99,22 +99,22 @@
           <div class="hotel-search-filter">
             <form class="hotel-search-form" action="https://echo.htmlacademy.ru" method="post">
               <label for="checkin-field-id">Дата заезда:</label>
-              <input id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
+              <input class="hotel-search-form-date-field" id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
               <label for="checkout-field-id">Дата выезда:</label>
-              <input id="checkout-field-id" type="text" name="checkout-date" value="4 ИЮЛЯ 2016">
+              <input class="hotel-search-form-date-field" id="checkout-field-id" type="text" name="checkout-date" value="4 ИЮЛЯ 2016">
               <label for="adults-field-id">Взрослые:</label>
               <button class="btn-inc" type="button">-</button>
-              <input id="adults-field-id" type="text" name="adults-cnt" value="2">
+              <input class="hotel-search-form-cnt-field" id="adults-field-id" type="text" name="adults-cnt" value="2">
               <button class="btn-inc" type="button">+</button>
               <label for="children-field-id">Дети:</label>
               <button class="btn-inc" type="button">-</button>
-              <input id="children-field-id" type="text" name="children-cnt" value="0">
+              <input class="hotel-search-form-cnt-field" id="children-field-id" type="text" name="children-cnt" value="0">
               <button class="btn-inc" type="button">+</button>
               <button class="btn" type="submit">Найти</button>
             </form>
           </div>
           <div class="hotel-search-map">
-            <img src="img/map.jpg" width="1200" height="473">
+            <img src="img/map.jpg" width="1200" height="593">
           </div>
         </section>
       </main>
@@ -123,9 +123,15 @@
           <a href="#">#VISITSEDONA</a>
         </section>
         <section class="footer-social">
-          <a class="social-btn social-btn-twitter" href="#">Твиттер</a>
-          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-          <a class="social-btn social-btn-youtube" href="#">Ютуб</a>
+          <a class="social-btn social-btn-twitter" href="#">Твиттер
+            <span class="icon-twitter"></span>
+          </a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук
+            <span class="icon-facebook"></span>
+          </a>
+          <a class="social-btn social-btn-youtube" href="#">Ютуб
+            <span class="icon-youtube"></span>
+          </a>
         </section>
         <section class="footer-copyright">
           <span>Website by</span>
