--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,9 @@
           </ul>
         </nav>
         <div class="top-logo">
-          <img src="img/top-logo.png" width="138" height="70" alt="Седона">
+          <a href="index.html">
+            <img src="img/top-logo.png" width="138" height="70" alt="Седона">
+          </a>
         </div>
       </header>
       <main>
@@ -92,24 +94,24 @@
               Сортировка:
             </li>
             <li>
-              <a href="#">По цене</a>
+              <a href="#" class="sorts-kind active">По цене</a>
             </li>
             <li>
-              <a href="#">По типу</a>
+              <a href="#" class="sorts-kind">По типу</a>
             </li>
             <li>
-              <a href="#">По рейтингу</a>
+              <a href="#" class="sorts-kind">По рейтингу</a>
             </li>
           </ul>
           <div class="sort-direction">
-            <a href="#" class="sort-direction-arrow arrow-up"><span class="icon-up-dir"></span></a>
-            <a href="#" class="sort-direction-arrow arrow-down"><span class="icon-down-dir"></span></a>
+            <a href="#" class="sort-direction-arrow"><span class="icon-up-dir"></span></a>
+            <a href="#" class="sort-direction-arrow active"><span class="icon-down-dir"></span></a>
           </div>
         </div>
         <section class="hotels">
           <article class="hotel clearfix">
             <div class="hotel-img" >
-              <img src="img/hotel-one.jpg" width="135" height="90">
+              <img src="img/hotel-one.jpg" width="135" height="90" alt="Amara resort and spa">
             </div>
             <div class="hotel-bookin">
               <h2>Amara resort &amp; spa</h2>
@@ -118,8 +120,8 @@
                 <span class="hotel-bookin-price">от 3500 р.</span>
               </p>
               <div class="hotel-bookin-actions">
-                <a hreh="#">Подробнее</a>
-                <a href="#">Забронировать</a>
+                <a href="#" class="blue-button">Подробнее</a>
+                <a href="#" class="brown-button">Забронировать</a>
               </div>
             </div>
             <div class="hotel-rating">
@@ -134,7 +136,7 @@
           </article>
           <article class="hotel clearfix">
             <div class="hotel-img" >
-              <img src="img/hotel-two.jpg" width="135" height="90">
+              <img src="img/hotel-two.jpg" width="135" height="90" alt="Desert quail inn">
             </div>
             <div class="hotel-bookin">
               <h2>Desert quail inn</h2>
@@ -143,8 +145,8 @@
                 <span class="hotel-bookin-price">от 2000 р.</span>
               </p>
               <div class="hotel-bookin-actions">
-                <a hreh="#">Подробнее</a>
-                <a href="#">Забронировать</a>
+                <a href="#" class="blue-button">Подробнее</a>
+                <a href="#" class="brown-button">Забронировать</a>
               </div>
             </div>
             <div class="hotel-rating">
@@ -157,7 +159,7 @@
           </article>
           <article class="hotel clearfix">
             <div class="hotel-img" >
-              <img src="img/hotel-three.jpg" width="135" height="90">
+              <img src="img/hotel-three.jpg" width="135" height="90" alt="Villas at poco diablo">
             </div>
             <div class="hotel-bookin">
               <h2>Villas at poco diablo</h2>
@@ -166,8 +168,8 @@
                 <span class="hotel-bookin-price">от 4000 р.</span>
               </p>
               <div class="hotel-bookin-actions">
-                <a hreh="#">Подробнее</a>
-                <a href="#">Забронировать</a>
+                <a href="#" class="blue-button">Подробнее</a>
+                <a href="#" class="brown-button">Забронировать</a>
               </div>
             </div>
             <div class="hotel-rating">
@@ -199,7 +201,7 @@
         <section class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru">
-            <img src="img/html-academy-logo.png" width="113" height="39">
+            <div class="html-academy-logo"></div>
           </a>
         </section>
       </footer>
