--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <a href="#">Фото и видео</a>
             </li>
             <li>
-              <a href="#">Гостиницы</a>
+              <a href="catalog.html">Гостиницы</a>
             </li>
             <li>
               <a href="#">Карта штата</a>
@@ -32,7 +32,6 @@
       </header>
       <main>
         <div class="index-welcome">
-          <!-- <img src="http://placehold.it/1200x508" width="1200" height="508" alt="Welcome to CEDONA"> -->
         </div>
         <div class="index-content">
           <h1>Седона &mdash; небольшой городок в аризоне, заслуживающий большего!</h1>
@@ -45,7 +44,7 @@
             <p class="feature-text">Седона &mdash; не аттракцион для туристов, там течет своя жизнь</p>
           </div>
           <div class="feature-image">
-            <img src="img/feature-image-one.jpg" width="800" height="256">
+            <img src="img/feature-image-one.jpg" width="800" height="256" alt="Настоящий городок">
           </div>
         </section>
         <section class="need clearfix">
@@ -64,7 +63,7 @@
         </section>
         <section class="feature feature-number-two clearfix">
           <div class="feature-image">
-            <img src="img/feature-image-two.jpg" width="800" height="256">
+            <img src="img/feature-image-two.jpg" width="800" height="256" alt="Мост дьявола">
           </div>
           <div class="feature-description">
             <h2 class="feature-name">Там есть <br> мост дьявола</h2>
@@ -94,27 +93,33 @@
             <b>Заинтересовались?</b>
             <p>Укажите предпологаемые даты поездки,<br>
               и мы покажем вам лучшие предложения гостиниц в седоне</p>
-            <button class="btn hotel-search-form-popup-btn" type="button">Поиск гостиницы в седоне</button>
+            <button class="btn modal-window-toggle-btn" type="button">Поиск гостиницы в седоне</button>
           </div>
-          <div class="hotel-search-filter">
+          <div class="modal-window">
             <form class="hotel-search-form" action="https://echo.htmlacademy.ru" method="post">
-              <label for="checkin-field-id">Дата заезда:</label>
-              <input class="hotel-search-form-date-field" id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
-              <label for="checkout-field-id">Дата выезда:</label>
-              <input class="hotel-search-form-date-field" id="checkout-field-id" type="text" name="checkout-date" value="4 ИЮЛЯ 2016">
-              <label for="adults-field-id">Взрослые:</label>
-              <button class="btn-inc" type="button">-</button>
-              <input class="hotel-search-form-cnt-field" id="adults-field-id" type="text" name="adults-cnt" value="2">
-              <button class="btn-inc" type="button">+</button>
-              <label for="children-field-id">Дети:</label>
-              <button class="btn-inc" type="button">-</button>
-              <input class="hotel-search-form-cnt-field" id="children-field-id" type="text" name="children-cnt" value="0">
-              <button class="btn-inc" type="button">+</button>
-              <button class="btn" type="submit">Найти</button>
+              <div class="form-item">
+                <label for="checkin-field-id">Дата заезда:</label>
+                <input class="form-date-field" id="checkin-field-id" type="text" name="checkin-date" value="24 АПРЕЛЯ 2016">
+                <span class="icon-calendar"></span>
+              </div>
+              <div class="form-item">
+                <label for="checkout-field-id">Дата выезда:</label>
+                <input class="form-date-field" id="checkout-field-id" type="text" name="checkout-date" value="4 ИЮЛЯ 2016">
+                <span class="icon-calendar"></span>
+              </div>
+              <div class="form-item form-item-inline">
+                <label for="adults-field-id">Взрослые:</label>
+                <input class="field-cnt" id="adults-field-id" type="text" name="adults-cnt" value="2">
+              </div>
+              <div class="form-item form-item-inline">
+                <label for="children-field-id">Дети:</label>
+                <input class="field-cnt" id="children-field-id" type="text" name="children-cnt" value="0">
+              </div>
+              <button class="btn hotel-search-btn" type="submit">Найти</button>
             </form>
           </div>
           <div class="hotel-search-map">
-            <img src="img/map.jpg" width="1200" height="593">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52380.33669792748!2d-111.80011730713295!3d34.861979874023966!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1472924035920" width="1200" height="593" style="border:0" allowfullscreen></iframe>
           </div>
         </section>
       </main>
@@ -136,10 +141,11 @@
         <section class="footer-copyright">
           <span>Website by</span>
           <a href="https://htmlacademy.ru">
-            <img src="img/html-academy-logo.png" width="113" height="39">
+            <div class="html-academy-logo"></div>
           </a>
         </section>
       </footer>
     </div>
+    <script src="js/script.js"></script>
   </body>
 </html>
