--- a/search.html
+++ b/search.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
     <link href="css/normalize.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style.min.css" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -81,6 +81,5 @@
         </section>
       </footer>
     </div>
-    <script src="js/script.js"></script>
   </body>
 </html>
