--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                 <label for="adults-field-id">Взрослые:</label>
                 <button class="btn-inc"><span class="icon-minus"></span></button>
                 <input class="field-cnt" id="adults-field-id" type="text" name="adults-cnt" value="2">
-                <button class="btn-dec"><span class="icon-plus"></button>
+                <button class="btn-dec"><span class="icon-plus"></span></button>
               </div>
               <div class="form-item form-item-inline">
                 <label for="children-field-id">Дети:</label>
                 <button class="btn-inc"><span class="icon-minus"></span></button>
                 <input class="field-cnt" id="children-field-id" type="text" name="children-cnt" value="0">
-                <button class="btn-dec"><span class="icon-plus"></button>
+                <button class="btn-dec"><span class="icon-plus"></span></button>
               </div>
               <button class="btn hotel-search-btn" type="submit">Найти</button>
             </form>
