--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
         </section>
         <section class="footer-copyright">
           <span>Website by</span>
-          <a href="https://htmlacademy.ru">
-            <div class="html-academy-logo"></div>
-          </a>
+          <a class="html-academy-logo" href="https://htmlacademy.ru"></a>
         </section>
       </footer>
     </div>
