После финальные коммиты

--- a/catalog.html
+++ b/catalog.html
@@ -36,37 +36,29 @@
           <form class="filters-form clearfix" action="https://echo.htmlacademy.ru" method="post">
             <div class="filters-checkbox-block">
               <p>Инфраструктура:</p>
-              <ul>
-                <li>
-                  <input type="checkbox" name="infrastructure" id="pool-id" checked>
+
+                  <input class="input-checkbox" type="checkbox" name="infrastructure" id="pool-id" checked>
                   <label for="pool-id">Бассейн</label>
-                </li>
-                <li>
-                  <input type="checkbox" name="infrastructure" id="parking-id">
+
+                  <input class="input-checkbox" type="checkbox" name="infrastructure" id="parking-id">
                   <label for="parking-id">Парковка</label>
-                </li>
-                <li>
-                  <input type="checkbox" name="infrastructure" id="wifi-id">
+
+                  <input class="input-checkbox" type="checkbox" name="infrastructure" id="wifi-id">
                   <label for="wifi-id">wi-fi</label>
-                </li>
-              </ul>
+
             </div>
             <div class="filters-checkbox-block">
               <p>Тип жилья:</p>
-              <ul>
-                <li>
-                  <input type="checkbox" name="appartment-type" id="hotel-id" checked>
+
+                  <input class="input-checkbox" type="checkbox" name="appartment-type" id="hotel-id" checked>
                   <label for="hotel-id">Гостиница</label>
-                </li>
-                <li>
-                  <input type="checkbox" name="appartment-type" id="motel-id" checked>
+
+                  <input class="input-checkbox" type="checkbox" name="appartment-type" id="motel-id" checked>
                   <label for="motel-id">Мотель</label>
-                </li>
-                <li>
-                  <input type="checkbox" name="appartment-type" id="appartment-id" checked>
+
+                  <input class="input-checkbox" type="checkbox" name="appartment-type" id="appartment-id" checked>
                   <label for="appartment-id">Апартаменты</label>
-                </li>
-              </ul>
+
             </div>
             <div class="filter-range">
               <div class="filter-range-title">Стоимость в сутки (р):</div>
@@ -104,8 +96,8 @@
             </li>
           </ul>
           <div class="sort-direction">
-            <a href="#" class="sort-direction-arrow"><span class="icon-up-dir"></span></a>
-            <a href="#" class="sort-direction-arrow active"><span class="icon-down-dir"></span></a>
+            <a href="#" class="sort-direction-arrow icon-up-dir"></a>
+            <a href="#" class="sort-direction-arrow icon-down-dir active"></a>
           </div>
         </div>
         <section class="hotels">
